class_file/snapshots/custom-classes-class_is_not_primitive-ClassIsNotPrimitiveMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class classes.class_is_not_primitive.ClassIsNotPrimitiveMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #19                      //classes/class_is_not_primitive/ClassIsNotPrimitiveMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = String             #8               // 
   #8 = Utf8               
   #9 = Methodref          #2.#10           // java/lang/Object.getClass:()Ljava/lang/Class;
  #10 = NameAndType        #11:#12          // getClass:()Ljava/lang/Class;
  #11 = Utf8               getClass
  #12 = Utf8               ()Ljava/lang/Class;
  #13 = Methodref          #14.#15          // java/lang/Class.isPrimitive:()Z
  #14 = Class              #16              // java/lang/Class
  #15 = NameAndType        #17:#18          // isPrimitive:()Z
  #16 = Utf8               java/lang/Class
  #17 = Utf8               isPrimitive
  #18 = Utf8               ()Z
  #19 = Class              #20              // classes/class_is_not_primitive/ClassIsNotPrimitiveMain
  #20 = Utf8               classes/class_is_not_primitive/ClassIsNotPrimitiveMain
  #21 = Utf8               Code
  #22 = Utf8               LineNumberTable
  #23 = Utf8               LocalVariableTable
  #24 = Utf8               this
  #25 = Utf8               Lclasses/class_is_not_primitive/ClassIsNotPrimitiveMain;
  #26 = Utf8               main
  #27 = Utf8               ([Ljava/lang/String;)V
  #28 = Utf8               args
  #29 = Utf8               [Ljava/lang/String;
  #30 = Utf8               strClass
  #31 = Utf8               Ljava/lang/Class;
  #32 = Utf8               a
  #33 = Utf8               Z
  #34 = Utf8               LocalVariableTypeTable
  #35 = Utf8               Ljava/lang/Class<+Ljava/lang/String;>;
  #36 = Utf8               SourceFile
  #37 = Utf8               ClassIsNotPrimitiveMain.java
{
  public classes.class_is_not_primitive.ClassIsNotPrimitiveMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lclasses/class_is_not_primitive/ClassIsNotPrimitiveMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=1, locals=3, args_size=1
         0: ldc           #7                  // String 
         2: invokevirtual #9                  // Method java/lang/Object.getClass:()Ljava/lang/Class;
         5: astore_1                
         6: aload_1                 
         7: invokevirtual #13                 // Method java/lang/Class.isPrimitive:()Z
        10: istore_2                
        11: return                  
      LineNumberTable:
        line 5: 0
        line 6: 6
        line 7: 11
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       12     0  args   [Ljava/lang/String;
           6        6     1  strClass Ljava/lang/Class;
          11        1     2  a      Z
      LocalVariableTypeTable:
         Start   Length  Slot  Name   Signature
             6        6     1  strClass   Ljava/lang/Class<+Ljava/lang/String;>;
}
SourceFile: "ClassIsNotPrimitiveMain.java"
