class_file/snapshots/custom-collections-concurrent_hash_map_without_concurrency_check-ConcurrentHashMapWithoutConcurrencyCheckMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class collections.concurrent_hash_map_without_concurrency_check.ConcurrentHashMapWithoutConcurrencyCheckMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #24                      //collections/concurrent_hash_map_without_concurrency_check/ConcurrentHashMapWithoutConcurrencyCheckMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // java/util/concurrent/ConcurrentHashMap
   #8 = Utf8               java/util/concurrent/ConcurrentHashMap
   #9 = Methodref          #7.#3            // java/util/concurrent/ConcurrentHashMap."<init>":()V
  #10 = String             #11              // java.version
  #11 = Utf8               java.version
  #12 = String             #13              // 24
  #13 = Utf8               24
  #14 = Methodref          #7.#15           // java/util/concurrent/ConcurrentHashMap.put:(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;
  #15 = NameAndType        #16:#17          // put:(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;
  #16 = Utf8               put
  #17 = Utf8               (Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;
  #18 = Methodref          #7.#19           // java/util/concurrent/ConcurrentHashMap.get:(Ljava/lang/Object;)Ljava/lang/Object;
  #19 = NameAndType        #20:#21          // get:(Ljava/lang/Object;)Ljava/lang/Object;
  #20 = Utf8               get
  #21 = Utf8               (Ljava/lang/Object;)Ljava/lang/Object;
  #22 = Class              #23              // java/lang/String
  #23 = Utf8               java/lang/String
  #24 = Class              #25              // collections/concurrent_hash_map_without_concurrency_check/ConcurrentHashMapWithoutConcurrencyCheckMain
  #25 = Utf8               collections/concurrent_hash_map_without_concurrency_check/ConcurrentHashMapWithoutConcurrencyCheckMain
  #26 = Utf8               Code
  #27 = Utf8               LineNumberTable
  #28 = Utf8               LocalVariableTable
  #29 = Utf8               this
  #30 = Utf8               Lcollections/concurrent_hash_map_without_concurrency_check/ConcurrentHashMapWithoutConcurrencyCheckMain;
  #31 = Utf8               main
  #32 = Utf8               ([Ljava/lang/String;)V
  #33 = Utf8               args
  #34 = Utf8               [Ljava/lang/String;
  #35 = Utf8               map
  #36 = Utf8               Ljava/util/concurrent/ConcurrentHashMap;
  #37 = Utf8               version
  #38 = Utf8               Ljava/lang/String;
  #39 = Utf8               LocalVariableTypeTable
  #40 = Utf8               Ljava/util/concurrent/ConcurrentHashMap<Ljava/lang/String;Ljava/lang/String;>;
  #41 = Utf8               SourceFile
  #42 = Utf8               ConcurrentHashMapWithoutConcurrencyCheckMain.java
{
  public collections.concurrent_hash_map_without_concurrency_check.ConcurrentHashMapWithoutConcurrencyCheckMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 5: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lcollections/concurrent_hash_map_without_concurrency_check/ConcurrentHashMapWithoutConcurrencyCheckMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=3, locals=3, args_size=1
         0: new           #7                  // class java/util/concurrent/ConcurrentHashMap
         3: dup                     
         4: invokespecial #9                  // Method java/util/concurrent/ConcurrentHashMap."<init>":()V
         7: astore_1                
         8: aload_1                 
         9: ldc           #10                 // String java.version
        11: ldc           #12                 // String 24
        13: invokevirtual #14                 // Method java/util/concurrent/ConcurrentHashMap.put:(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;
        16: pop                     
        17: aload_1                 
        18: ldc           #10                 // String java.version
        20: invokevirtual #18                 // Method java/util/concurrent/ConcurrentHashMap.get:(Ljava/lang/Object;)Ljava/lang/Object;
        23: checkcast     #22                 // class java/lang/String
        26: astore_2                
        27: return                  
      LineNumberTable:
        line 7: 0
        line 8: 8
        line 9: 17
        line 10: 27
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       28     0  args   [Ljava/lang/String;
           8       20     1  map    Ljava/util/concurrent/ConcurrentHashMap;
          27        1     2  version Ljava/lang/String;
      LocalVariableTypeTable:
         Start   Length  Slot  Name   Signature
             8       20     1  map    Ljava/util/concurrent/ConcurrentHashMap<Ljava/lang/String;Ljava/lang/String;>;
}
SourceFile: "ConcurrentHashMapWithoutConcurrencyCheckMain.java"
